2017-11-20  Bruno Haible  <bruno@clisp.org>

	Revert introduction of installed program 'clisp!' (no longer needed).
	* _clisp.c: Don't test SHEBANG_SUPPORT.
	* _distmakefile: Don't install 'clisp!'.
	* makemake.in: Likewise.
	* NEWS: Bug#699 is fixed without breaking backward compatibility.

2017-11-19  Bruno Haible  <bruno@clisp.org>

	Make it easier to test the optimizations in arilev0.d and ari*.d.
	* Makefile.devel (build-porting*-ari-asm, build-porting*-arilev0-asm):
	New targets.
	(multibuild-linux-hppa, multibuild-linux-i386): Depend on them.

2017-11-19  Bruno Haible  <bruno@clisp.org>

	Improve SYS::ADDRESS-OF in SINGLEMAP_MEMORY model.
	* misc.d (SYS::ADDRESS-OF): In SINGLEMAP_MEMORY model, do not mask
	out the type bits.

2017-11-19  Bruno Haible  <bruno@clisp.org>

	Fix build failure on Linux/s390x with HEAPCODES.
	* lispbibl.d: On Linux/s390x, prefer GENERIC64_HEAPCODES over
	ONE_FREE_BIT_HEAPCODES always.

2017-11-19  Bruno Haible  <bruno@clisp.org>

	Do not use a global register variable as return value for SPARC64.
	* arisparc64.d (asm_mulu32_64): Renamed from asm_mulu32_.
	Return 64 bits in %o0.
	(asm_divu_6432_3232_): Return 64 bits in %o0.
	(asm__get_g1): Remove function.
	* arilev0.d (mulu32, mulu32_, mulu32_64, divu_6432_3232,
	divu_6432_3232_) [SPARC64]: Update accordingly.

2017-11-19  Bruno Haible  <bruno@clisp.org>

	Fix bug#542: Do not use a global register variable as return value for SPARC.
	* arisparc.d (asm_mulu32_64): Renamed from asm_mulu32_. Return 64 bits
	in %o1,%o0, not %o0,%g1.
	(asm_divu_6432_3232_): Return 64 bits in %o1,%o0, not %o0,%g1.
	(asm_divu_loop_up, asm_divucopy_loop_up): Update accordingly.
	(asm__get_g1): Remove function.
	* arilev0.d (mulu32, mulu32_, mulu32_64, divu_6432_3232,
	divu_6432_3232_) [SPARC && !SPARC64]: Update accordingly.

2017-11-19  Bruno Haible  <bruno@clisp.org>

	Optimize arisparc.d also with Sun C and also for SPARCv9.
	* arisparc.d (sparcv8): Set also with Sun "cc -xarch=v8". Set also when