@@ -171,33 +171,22 @@ modexp uint32 I_to_UL (object obj)
    case_posbignum: { /* bignum >0 */
     var Bignum bn = TheBignum(obj);
     var uintC len = bignum_length(bn);
-    #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-    #pragma GCC diagnostic push
-    #pragma GCC diagnostic ignored "-Wparentheses"
-    #endif
-    #define IF_LENGTH(i)                                                 \
+    #define IF_LENGTH(i,get_udelta)                                      \
       if (bn_minlength <= i) /* exactly i digits possible at all? */     \
-        if (len == i) /* exactly i digits? */                            \
+        if (len == i) { /* exactly i digits? */                          \
           /* 2^((i-1)*intDsize-1) <= obj < 2^(i*intDsize-1) */           \
           if ( (i*intDsize-1 > 32)                                       \
                && ( ((i-1)*intDsize-1 >= 32)                             \
                     || (bn->data[0] >= (uintD)bitc(32-(i-1)*intDsize)))) \
             goto bad;                                                    \
-          else
-    IF_LENGTH(1)
-      return get_uint1D_Dptr(bn->data);
-    IF_LENGTH(2)
-      return get_uint2D_Dptr(bn->data);
-    IF_LENGTH(3)
-      return get_uint3D_Dptr(bn->data);
-    IF_LENGTH(4)
-      return get_uint4D_Dptr(bn->data);
-    IF_LENGTH(5)
-      return get_uint4D_Dptr(&bn->data[1]);
+          else return get_udelta;                                        \
+        }
+    IF_LENGTH(1, get_uint1D_Dptr(bn->data))
+    IF_LENGTH(2, get_uint2D_Dptr(bn->data))
+    IF_LENGTH(3, get_uint3D_Dptr(bn->data))
+    IF_LENGTH(4, get_uint4D_Dptr(bn->data))
+    IF_LENGTH(5, get_uint4D_Dptr(&bn->data[1]))
     #undef IF_LENGTH
-    #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-    #pragma GCC diagnostic pop
-    #endif
    }
    default:
    bad: /* unsuitable object */
@@ -243,31 +232,21 @@ modexp sint32 I_to_L (object obj)
    case_posbignum: { /* bignum >0 */
     var Bignum bn = TheBignum(obj);
     var uintC len = bignum_length(bn);
-    #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-    #pragma GCC diagnostic push
-    #pragma GCC diagnostic ignored "-Wparentheses"
-    #endif
-    #define IF_LENGTH(i)                                                 \
+    #define IF_LENGTH(i,get_udelta)                                      \
       if (bn_minlength <= i) /* exactly i digits possible at all? */     \
-        if (len == i) /* exactly i digits? */                            \
+        if (len == i) { /* exactly i digits? */                          \
           /* 2^((i-1)*intDsize-1) <= obj < 2^(i*intDsize-1) */           \
           if ( (i*intDsize > 32)                                         \
                && ( ((i-1)*intDsize >= 32)                               \
                     || (bn->data[0] >= (uintD)bitc(31-(i-1)*intDsize)))) \
             goto bad;                                                    \
-          else
-    IF_LENGTH(1)
-      return get_uint1D_Dptr(bn->data);
-    IF_LENGTH(2)
-      return get_uint2D_Dptr(bn->data);
-    IF_LENGTH(3)
-      return get_uint3D_Dptr(bn->data);
-    IF_LENGTH(4)
-      return get_uint4D_Dptr(bn->data);
+          else return get_udelta;                                        \
+        }
+    IF_LENGTH(1, get_uint1D_Dptr(bn->data))
+    IF_LENGTH(2, get_uint2D_Dptr(bn->data))
+    IF_LENGTH(3, get_uint3D_Dptr(bn->data))
+    IF_LENGTH(4, get_uint4D_Dptr(bn->data))
     #undef IF_LENGTH
-    #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-    #pragma GCC diagnostic pop
-    #endif
     goto bad;
    }
    case_negfixnum: { /* fixnum <0 */
@@ -282,31 +261,21 @@ modexp sint32 I_to_L (object obj)
    case_negbignum: { /* bignum <0 */
     var Bignum bn = TheBignum(obj);
     var uintC len = bignum_length(bn);
-    #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-    #pragma GCC diagnostic push
-    #pragma GCC diagnostic ignored "-Wparentheses"
-    #endif
-    #define IF_LENGTH(i)                                                   \
+    #define IF_LENGTH(i,get_udelta)                                        \
       if (bn_minlength <= i) /* exactly i digits possible at all? */       \
-        if (len == i) /* exactly i digits? */                              \
+        if (len == i) { /* exactly i digits? */                            \
           /* - 2^(i*intDsize-1) <= obj < - 2^((i-1)*intDsize-1) */         \
           if ( (i*intDsize > 32)                                           \
                && ( ((i-1)*intDsize >= 32)                                 \
                     || (bn->data[0] < (uintD)(-bitc(31-(i-1)*intDsize))))) \
             goto bad;                                                      \
-          else
-    IF_LENGTH(1)
-      return get_sint1D_Dptr(bn->data);
-    IF_LENGTH(2)
-      return get_sint2D_Dptr(bn->data);
-    IF_LENGTH(3)
-      return get_sint3D_Dptr(bn->data);
-    IF_LENGTH(4)
-      return get_sint4D_Dptr(bn->data);
+          else return get_udelta;                                          \
+        }
+    IF_LENGTH(1, get_sint1D_Dptr(bn->data))
+    IF_LENGTH(2, get_sint2D_Dptr(bn->data))
+    IF_LENGTH(3, get_sint3D_Dptr(bn->data))
+    IF_LENGTH(4, get_sint4D_Dptr(bn->data))
     #undef IF_LENGTH
-    #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-    #pragma GCC diagnostic pop
-    #endif
     goto bad;
    }
    default:
@@ -342,43 +311,29 @@ modexp uint64 I_to_UQ (object obj)
    case_posbignum: { /* bignum >0 */
       var Bignum bn = TheBignum(obj);
       var uintC len = bignum_length(bn);
-      #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-      #pragma GCC diagnostic push
-      #pragma GCC diagnostic ignored "-Wparentheses"
-      #endif
-      #define IF_LENGTH(i)                                                 \
+      #define IF_LENGTH(i,get_udelta)                                      \
        if (bn_minlength <= i) /* exactly i digits possible at all? */      \
-          if (len == i) /* exactly i digits? */                            \
+          if (len == i) { /* exactly i digits? */                          \
             /* 2^((i-1)*intDsize-1) <= obj < 2^(i*intDsize-1) */           \
             if ( (i*intDsize-1 > 64)                                       \
                  && ( ((i-1)*intDsize-1 >= 64)                             \
                       || (bn->data[0] >= (uintD)bitc(64-(i-1)*intDsize)))) \
               goto bad;                                                    \
-            else
+            else return get_udelta;                                        \
+          }
      #if (intDsize==32)
-      IF_LENGTH(1)
-        return (uint64)get_uint1D_Dptr(bn->data);
-      IF_LENGTH(2)
-        return ((uint64)get_uint1D_Dptr(bn->data) << 32) | (uint64)get_uint1D_Dptr(&bn->data[1]);
-      IF_LENGTH(3)
-        return ((uint64)get_uint1D_Dptr(&bn->data[1]) << 32) | (uint64)get_uint1D_Dptr(&bn->data[2]);
+      IF_LENGTH(1, (uint64)get_uint1D_Dptr(bn->data))
+      IF_LENGTH(2, ((uint64)get_uint1D_Dptr(bn->data) << 32) | (uint64)get_uint1D_Dptr(&bn->data[1]))
+      IF_LENGTH(3, ((uint64)get_uint1D_Dptr(&bn->data[1]) << 32) | (uint64)get_uint1D_Dptr(&bn->data[2]))
      #endif
      #if (intDsize==16)
-      IF_LENGTH(1)
-        return (uint64)get_uint1D_Dptr(bn->data);
-      IF_LENGTH(2)
-        return (uint64)get_uint2D_Dptr(bn->data);
-      IF_LENGTH(3)
-        return ((uint64)get_uint1D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[1]);
-      IF_LENGTH(4)
-        return ((uint64)get_uint2D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[2]);
-      IF_LENGTH(5)
-        return ((uint64)get_uint2D_Dptr(&bn->data[1]) << 32) | (uint64)get_uint2D_Dptr(&bn->data[3]);
+      IF_LENGTH(1, (uint64)get_uint1D_Dptr(bn->data))
+      IF_LENGTH(2, (uint64)get_uint2D_Dptr(bn->data))
+      IF_LENGTH(3, ((uint64)get_uint1D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[1]))
+      IF_LENGTH(4, ((uint64)get_uint2D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[2]))
+      IF_LENGTH(5, ((uint64)get_uint2D_Dptr(&bn->data[1]) << 32) | (uint64)get_uint2D_Dptr(&bn->data[3]))
      #endif
       #undef IF_LENGTH
-      #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-      #pragma GCC diagnostic pop
-      #endif
     }
     default:
     bad: /* unsuitable object */
@@ -421,39 +376,27 @@ modexp sint64 I_to_Q (object obj)
    case_posbignum: { /* Bignum >0 */
       var Bignum bn = TheBignum(obj);
       var uintC len = bignum_length(bn);
-      #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-      #pragma GCC diagnostic push
-      #pragma GCC diagnostic ignored "-Wparentheses"
-      #endif
-      #define IF_LENGTH(i)  \
+      #define IF_LENGTH(i,get_udelta)                                      \
         if (bn_minlength <= i) /* exactly i digits possible at all? */     \
-          if (len == i) /* exaclty i digits? */                            \
+          if (len == i) { /* exactly i digits? */                          \
             /* 2^((i-1)*intDsize-1) <= obj < 2^(i*intDsize-1) */           \
             if ( (i*intDsize > 64)                                         \
                  && ( ((i-1)*intDsize >= 64)                               \
                       || (bn->data[0] >= (uintD)bitc(63-(i-1)*intDsize)))) \
               goto bad;                                                    \
-            else
+            else return get_udelta;                                        \
+          }
      #if (intDsize==32)
-      IF_LENGTH(1)
-        return (uint64)get_uint1D_Dptr(bn->data);
-      IF_LENGTH(2)
-        return ((uint64)get_uint1D_Dptr(bn->data) << 32) | (uint64)get_uint1D_Dptr(&bn->data[1]);
+      IF_LENGTH(1, (uint64)get_uint1D_Dptr(bn->data))
+      IF_LENGTH(2, ((uint64)get_uint1D_Dptr(bn->data) << 32) | (uint64)get_uint1D_Dptr(&bn->data[1]))
      #endif
      #if (intDsize==16)
-      IF_LENGTH(1)
-        return (uint64)get_uint1D_Dptr(bn->data);
-      IF_LENGTH(2)
-        return (uint64)get_uint2D_Dptr(bn->data);
-      IF_LENGTH(3)
-        return ((uint64)get_uint1D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[1]);
-      IF_LENGTH(4)
-        return ((uint64)get_uint2D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[2]);
+      IF_LENGTH(1, (uint64)get_uint1D_Dptr(bn->data))
+      IF_LENGTH(2, (uint64)get_uint2D_Dptr(bn->data))
+      IF_LENGTH(3, ((uint64)get_uint1D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[1]))
+      IF_LENGTH(4, ((uint64)get_uint2D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[2]))
      #endif
       #undef IF_LENGTH
-      #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-      #pragma GCC diagnostic pop
-      #endif
       goto bad;
     }
    case_negfixnum: /* Fixnum <0 */
@@ -461,39 +404,27 @@ modexp sint64 I_to_Q (object obj)
    case_negbignum: { /* Bignum <0 */
       var Bignum bn = TheBignum(obj);
       var uintC len = bignum_length(bn);
-      #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-      #pragma GCC diagnostic push
-      #pragma GCC diagnostic ignored "-Wparentheses"
-      #endif
-      #define IF_LENGTH(i)  \
+      #define IF_LENGTH(i,get_udelta)                                        \
         if (bn_minlength <= i) /* exactly i digits possible at all? */       \
-          if (len == i) /* exactly i digits? */                              \
+          if (len == i) { /* exactly i digits? */                            \
             /* - 2^(i*intDsize-1) <= obj < - 2^((i-1)*intDsize-1) */         \
             if ( (i*intDsize > 64)                                           \
                  && ( ((i-1)*intDsize >= 64)                                 \
                       || (bn->data[0] < (uintD)(-bitc(63-(i-1)*intDsize))))) \
               goto bad;                                                      \
-            else
+            else return get_udelta;                                          \
+          }
      #if (intDsize==32)
-      IF_LENGTH(1)
-        return (sint64)get_sint1D_Dptr(bn->data);
-      IF_LENGTH(2)
-        return ((sint64)get_sint1D_Dptr(bn->data) << 32) | (uint64)get_uint1D_Dptr(&bn->data[1]);
+      IF_LENGTH(1, (sint64)get_sint1D_Dptr(bn->data))
+      IF_LENGTH(2, ((sint64)get_sint1D_Dptr(bn->data) << 32) | (uint64)get_uint1D_Dptr(&bn->data[1]))
      #endif
      #if (intDsize==16)
-      IF_LENGTH(1)
-        return (sint64)get_sint1D_Dptr(bn->data);
-      IF_LENGTH(2)
-        return (sint64)get_sint2D_Dptr(bn->data);
-      IF_LENGTH(3)
-        return ((sint64)get_sint1D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[1]);
-      IF_LENGTH(4)
-        return ((sint64)get_sint2D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[2]);
+      IF_LENGTH(1, (sint64)get_sint1D_Dptr(bn->data))
+      IF_LENGTH(2, (sint64)get_sint2D_Dptr(bn->data))
+      IF_LENGTH(3, ((sint64)get_sint1D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[1]))
+      IF_LENGTH(4, ((sint64)get_sint2D_Dptr(bn->data) << 32) | (uint64)get_uint2D_Dptr(&bn->data[2]))
      #endif
       #undef IF_LENGTH
-      #if __GNUC__ + (__GNUC_MINOR__ >= 6) > 4
-      #pragma GCC diagnostic pop
-      #endif
       goto bad;
     }
     default:
